<resources>
    <string name="app_name">K22411CASampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_username_hint">Enter your name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to Exit?</string>
    <string name="title_confirm_exit_ok">OK</string>
    <string name="title_confirm_exit_cancel">Cancel</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_em_employeemanagement">Employee Management</string>
    <string name="title_em_name_hint">Name</string>
    <string name="title_em_age_hint">Age</string>
    <string name="title_em_department_hint">Department</string>
    <string name="title_em_skills_hint">Skills</string>
    <string name="title_em_selfdes_hint">Self description</string>
    <string name="title_em_employeelist">---Employee List---</string>
    <string name="title_em_button_add">Add employee</string>
    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_activity_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_main_advancedproducts">Advanced Products</string>
    <string name="title_main_products">Products\n</string>
    <string name="title_create_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising\n</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_create_new_product">New Product</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product Quantity:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_category_id">Category ID:</string>
    <string name="title_product_image_id">Image ID:</string>
</resources>