<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#FFE0B2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgEmployee"
                    android:layout_width="100dp"
                    android:layout_height="108dp"
                    android:textAlignment="center"
                    app:srcCompat="@mipmap/ic_employee" />

                <TextView
                    android:id="@+id/txtEmployee"
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_main_employee"
                    android:textAlignment="center"
                    android:textColor="#2196F3"
                    android:textColorLink="#2196F3"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#FFE0B2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCustomer"
                    android:layout_width="100dp"
                    android:layout_height="108dp"
                    android:textAlignment="center"
                    app:srcCompat="@mipmap/ic_customer" />

                <TextView
                    android:id="@+id/txtCustomer"
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_main_customer"
                    android:textAlignment="center"
                    android:textColor="#2196F3"
                    android:textColorLink="#2196F3"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#FFE0B2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProducts"
                    android:layout_width="100dp"
                    android:layout_height="108dp"
                    android:textAlignment="center"
                    app:srcCompat="@mipmap/ic_products" />

                <TextView
                    android:id="@+id/txtProducts"
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_main_products"
                    android:textAlignment="center"
                    android:textColor="#2196F3"
                    android:textColorLink="#2196F3"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#FFE0B2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAdvancedProducts"
                    android:layout_width="100dp"
                    android:layout_height="108dp"
                    android:textAlignment="center"
                    app:srcCompat="@mipmap/ic_advancedproducts" />

                <TextView
                    android:id="@+id/txtAdvancedProducts"
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_main_advancedproducts"
                    android:textAlignment="center"
                    android:textColor="#2196F3"
                    android:textColorLink="#2196F3"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</LinearLayout>